XMLtoCSV/objects/unpackaged/objects/PCYC_CTT_Accountshare__c.object
<CustomObject>
    <description>CTT Account share staging tables. source columns: accountId, userOrGroupId.  computed columns territory Id, territory Name, status</description>
    <fields>
        <fullName>PCYC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTT Accountshares</relationshipLabel>
        <relationshipName>CTT_Accountshares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Error_Message__c</fullName>
        <description>Errors if any</description>
        <inlineHelpText>Errors if any during alignment.</inlineHelpText>
        <label>Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id : Account Id, Group Id.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Last_Processed_Date__c</fullName>
        <description>Last Processed Date Time</description>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PCYC_Status__c</fullName>
        <defaultValue>&apos;Staged&apos;</defaultValue>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Territory_Id__c</fullName>
        <description>Territory Id</description>
        <label>Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Territory_Name__c</fullName>
        <description>Territory</description>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_UserOrGroupId__c</fullName>
        <description>UserOrGroupId</description>
        <label>UserOrGroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CTT Accountshare</label>
    <listViews>
        <fullName>Aligned</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Status__c</columns>
        <columns>PCYC_Territory_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCYC_Account__c</field>
            <operation>equals</operation>
            <value>Jamie Burton</value>
        </filters>
        <label>Aligned</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Territory_Name__c</columns>
        <columns>PCYC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCYC_Account__c</field>
            <operation>equals</operation>
            <value>Christopher Saenz</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last7DaysRemovals</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Territory_Name__c</columns>
        <columns>PCYC_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCYC_Status__c</field>
            <operation>equals</operation>
            <value>Unaligned</value>
        </filters>
        <filters>
            <field>PCYC_Account__c</field>
            <operation>equals</operation>
            <value>Miguel Pelayo</value>
        </filters>
        <label>Unaligned Account shares</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Staged</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Territory_Name__c</columns>
        <columns>PCYC_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCYC_Status__c</field>
            <operation>equals</operation>
            <value>Staged</value>
        </filters>
        <filters>
            <field>PCYC_Territory_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Staged</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CTT-{0}</displayFormat>
        <label>CTT #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTT Accountshares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>